# cc-desk

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  NOTICE.md  README.md  README_CN.md  SECURITY.md  SUPPORT.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  release.yml  sync-gitee.yml
docs/: build-and-release.md  capabilities.md  components.md  data-persistence.md  env-injection.md  hook-monitor.md  interaction.md  layout-design.md  logging.md  manual-test-cases.md  provider-management.md  provider-test-cases.md  release-process.md  release-template.md  roadmap.md  shortcuts.md  startup-checks.md  terminal-integration.md  vision.md  测试编写原则.md
docs/claude code docs/: Claude Code设置.md  Plugins参考.md  hooks.md  mcp.md  skills.md  subagents.md  交互模式.md  命令.md  扩展Claude.md  探索.claude.md  插件.md  概述.md  环境变量.md
docs/claude code sdk docs/: Configure permissions.md  Get structured output from agents.md  Handle approvals and user input.md  How the agent loop works.md  Intercept and control agent behavior with hooks.md  Rewind file changes with checkpointing.md  Slash Commands in the SDK.md  Stream responses in real-time.md  Streaming Input.md  Typescript SDK.md  Use Claude COde features.md  Work with sessions.md
scripts/: build.js  compatibility.test.js  download-deps.js  download-deps.test.js  generate-updater-manifest.js  rebuild-claude-versions.js  release.js  release.sh  release.test.js  verify-updater-manifest.js
scripts/.ossutil_checkpoint/: 397930a33277e5f7561a0a145a6b2175-fa401ad08e66e31c954f8a8eb8e68657.cp
src/: App.vue  env.d.ts  main.ts
src-tauri/: Cargo.toml  build.rs  installer.nsh  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/plugin/.claude-plugin/: plugin.json
src-tauri/plugin/hooks/: hooks.json
src-tauri/plugin/scripts/: report-hook.sh
src-tauri/src/: checks.rs  commands.rs  hook_config.rs  hook_events.rs  hook_server.rs  installer.rs  lib.rs  logger.rs  main.rs  mcp.rs  platform.rs  providers.rs  pty.rs  store.rs  updater.rs
src-tauri/src/tests/: checks.rs  env.rs  hook_events.rs  installer.rs  mcp.rs  mod.rs  platform.rs  providers.rs  pty.rs  store.rs
src-tauri/tests/: mcp_detail_test.rs
src/api/: tauri.ts
src/components/: IconBar.vue  InfoBar.vue  ProjectSelectView.vue  SettingsModal.vue  ShortcutsModal.vue  SidebarDrawer.vue  TerminalHeader.vue  TerminalView.vue  TitleBar.vue  WelcomeView.vue  XTermTerminal.vue
src/composables/: useAppShortcuts.ts  useAttentionQueue.ts  useStartupDecision.ts  useStatusMonitor.ts  useTerminalCommand.ts
src/config/: providerPresets.ts  terminalThemes.ts
src/stores/: app.ts  attention.ts  config.ts  session.ts  sidebar.ts  update.ts
src/styles/: global.css
src/types/: app.ts  config.ts  hook.ts  index.ts  project.ts  pty.ts  session.ts
src/utils/: displayName.ts  path.ts  platform.ts  ptyIndex.ts  theme.ts
tests/composables/: attentionQueue.test.ts  startupDecision.test.ts  statusMonitor.test.ts
tests/config/: terminalThemes.test.ts
tests/i18n/: translations.test.ts
tests/scripts/: releaseManifestUrls.test.ts  (+1 more)
(+49 files in other folders)
