[package]
name = "cc-box"
version = "0.13.1"
description = "Claude Code Desktop GUI (Tauri) - Multi-terminal manager for Claude Code power users"
authors = ["orczh <orczh_hj@163.com>"]
license = "MIT"
repository = "https://github.com/orczh-hj/cc-box"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "parking_lot", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }
anyhow = "1"
dirs = "5"
log = "0.4"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
arc-swap = "1"
chrono = "0.4"
encoding_rs = "0.8"
futures-util = "0.3"
once_cell = "1"
axum = "0.7"
tower = "0.5"
rusqlite = { version = "0.31", features = ["bundled"], optional = true }

[features]
default = ["sqlite"]
sqlite = ["rusqlite"]

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.38"
windows-core = "0.61"

[profile.release]
strip = true
lto = true
